# VMP-S-Curswork

./: README.md  Пояснительная записка.docx
task_01/: README.md  task_01
task_01/src/: main.cpp
task_02/: README.md  task_02
task_02/src/: main.cpp
task_03/: README.md  task_03  times_L3.txt  times_L4.txt  times_L5.txt
task_03/src/: main.cpp
task_04/: README.md  task_04
task_04/src/: main.cpp
task_05/: README.md  config.json  task_05
task_05/src/: main.cpp
task_06/: CMakeLists.txt  README.md
task_06/src/: main.cpp
task_07/: README.md  task_07
task_07/src/: main.cpp
task_08/: CMakeLists.txt  README.md
task_08/src/: main.cpp
task_09/: README.md  task_09
task_09/src/: main.cpp
task_10/: README.md  task_10
task_10/src/: main.cpp
task_11/: CMakeLists.txt  README.md
task_11/src/: main.cpp
task_12/: CMakeLists.txt  README.md
task_12/src/: main.cpp
task_13/: README.md  task_13
task_13/src/: main.cpp
